add comments and clean up code

--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -93,31 +93,31 @@
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('64f0ddef04e1b1fe7b6b9897'),\n",
-       " 'FHRSID': 647177,\n",
+       "{'_id': ObjectId('64f1584313cdc07f1c2bce68'),\n",
+       " 'FHRSID': 1043695,\n",
        " 'ChangesByServerID': 0,\n",
-       " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
-       " 'BusinessName': 'Wear Bay Bowls Club',\n",
-       " 'BusinessType': 'Pub/bar/nightclub',\n",
-       " 'BusinessTypeID': 7843,\n",
-       " 'AddressLine1': 'Wear Bay Road',\n",
-       " 'AddressLine2': 'Folkestone',\n",
-       " 'AddressLine3': 'Kent',\n",
-       " 'AddressLine4': '',\n",
-       " 'PostCode': 'CT19 6PY',\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
        " 'Phone': '',\n",
-       " 'RatingValue': 4,\n",
-       " 'RatingKey': 'fhrs_4_en-gb',\n",
-       " 'RatingDate': '2014-03-31T00:00:00',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
        " 'LocalAuthorityCode': '188',\n",
        " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
        " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 10},\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': 1.196408, 'latitude': 51.086058},\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
        " 'RightToReply': '',\n",
-       " 'Distance': 4591.821311183521,\n",
+       " 'Distance': 4591.765489457773,\n",
        " 'NewRatingPending': False,\n",
        " 'meta': {'dataSource': None,\n",
        "  'extractDate': '0001-01-01T00:00:00',\n",
@@ -128,7 +128,7 @@
        "  'pageSize': 0,\n",
        "  'pageNumber': 0},\n",
        " 'links': [{'rel': 'self',\n",
-       "   'href': 'https://api.ratings.food.gov.uk/establishments/647177'}]}"
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
       ]
      },
      "execution_count": 6,
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "007f3302",
    "metadata": {},
    "outputs": [
@@ -1715,32 +1715,32 @@
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>1</td>\n",
-       "      <td>Broxbourne</td>\n",
+       "      <td>North Norfolk</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50</th>\n",
        "      <td>1</td>\n",
-       "      <td>North Norfolk</td>\n",
+       "      <td>Sunderland</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>51</th>\n",
        "      <td>1</td>\n",
-       "      <td>Sunderland</td>\n",
+       "      <td>Reading</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52</th>\n",
        "      <td>1</td>\n",
-       "      <td>Reading</td>\n",
+       "      <td>Dorset</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
        "      <td>1</td>\n",
-       "      <td>Dorset</td>\n",
+       "      <td>Kensington and Chelsea</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>54</th>\n",
        "      <td>1</td>\n",
-       "      <td>Kensington and Chelsea</td>\n",
+       "      <td>Broxbourne</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1797,15 +1797,15 @@
        "46      9               Tower Hamlets\n",
        "47      6         North Hertfordshire\n",
        "48      5                  Mid Sussex\n",
-       "49      1                  Broxbourne\n",
-       "50      1               North Norfolk\n",
-       "51      1                  Sunderland\n",
-       "52      1                     Reading\n",
-       "53      1                      Dorset\n",
-       "54      1      Kensington and Chelsea"
+       "49      1               North Norfolk\n",
+       "50      1                  Sunderland\n",
+       "51      1                     Reading\n",
+       "52      1                      Dorset\n",
+       "53      1      Kensington and Chelsea\n",
+       "54      1                  Broxbourne"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
